<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timestamp_HMI_CMD" Id="{be6a9cad-fede-47a3-ba18-1cadf6281130}">
    <Declaration><![CDATA[TYPE ST_Timestamp_HMI_CMD :
STRUCT
	bResetRegistry				:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>