<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_TCPIP" Id="{e26f0609-c5dd-4c0e-bab1-8c4ef3547268}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_TCPIP 
VAR	
	bInit 						:BOOL := TRUE;
	
	fbReadFromCameraTCP			:FB_ReadTCP;
	bConnectToReadSocket		:BOOL;
	
	fbWriteToHLZ				:FB_WriteTCP;
	bConnectToWriteSocket		:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Init
IF bInit THEN	
	bInit := FALSE;
END_IF

//Call Methods
M_ReadCameraTCP();
M_WriteToHlzTCP();
]]></ST>
    </Implementation>
    <Method Name="M_ReadCameraTCP" Id="{c95fd805-970b-4ceb-80e0-471b56be01fb}">
      <Declaration><![CDATA[METHOD PUBLIC M_ReadCameraTCP : BOOL
VAR_INPUT
END_VAR
VAR
	stTCPConnection				:ST_TCPConnection;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Initialize Read TCP
stTCPConnection.sRemoteHost := '10.12.5.10';
stTCPConnection.nRemotePort := 51236;
stTCPConnection.tTimeOut := T#45S;
stTCPConnection.bSocketConnect := bConnectToReadSocket;
stTCPConnection.bReset := GVL_ItemSimulator.bResetRegistry;


//Call Read TCP
fbReadFromCameraTCP(stTCPConnection:=stTCPConnection);

]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_WriteToHlzTCP" Id="{b613047a-ae2a-4d62-a218-edbd1edcce5b}">
      <Declaration><![CDATA[METHOD PUBLIC M_WriteToHlzTCP : BOOL
VAR_INPUT
END_VAR
VAR
	stTCPConnection				:ST_TCPConnection;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Initialize Write TCP
stTCPConnection.sRemoteHost := '10.12.5.10';
stTCPConnection.nRemotePort := 51236;
stTCPConnection.tTimeOut := T#45S;
stTCPConnection.bSocketConnect := bConnectToWriteSocket;
stTCPConnection.bReset := GVL_ItemSimulator.bResetRegistry;


//Call Write TCP
fbWriteToHLZ(stTCPConnection:=stTCPConnection);

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_TCPIP">
      <LineId Id="469" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="328" Count="1" />
      <LineId Id="436" Count="0" />
      <LineId Id="464" Count="0" />
      <LineId Id="452" Count="0" />
      <LineId Id="468" Count="0" />
      <LineId Id="434" Count="0" />
    </LineIds>
    <LineIds Name="PRG_TCPIP.M_ReadCameraTCP">
      <LineId Id="10" Count="4" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="PRG_TCPIP.M_WriteToHlzTCP">
      <LineId Id="6" Count="10" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>